@@ -350,7 +350,7 @@ mozilla_cookie_to_ephy_cookie (nsICookie *cookie)
 
 #ifdef HAVE_GECKO_1_9
         PRBool isHttpOnly = PR_FALSE;
-        cookie2->GetHttpOnly (&isHttpOnly);
+        cookie2->GetIsHttpOnly (&isHttpOnly);
         info->is_http_only = isHttpOnly != PR_FALSE;
 #endif
 
