@@ -1,3 +1,11 @@
+2007-07-14  Christian Persch  <chpe@gnome.org>
+
+	* embed/mozilla/ContentHandler.cpp:
+	* embed/mozilla/EphySingle.cpp:
+	* embed/mozilla/MozDownload.cpp:
+
+	It's yet another API change!
+
 2007-07-11  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
 	* embed/mozilla/MozDownload.cpp:
